Added vavr implementation.